# vdynamics

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py  todo.txt
scripts/: gran.py  test.py
sphere_vis/: __init__.py
sphere_vis/resources/shaders/: circle_vis.fs  circle_vis.vs
src/: camera.cpp  camera.hpp  circle_vis.cpp  circle_vis.hpp  file_io.cpp  file_io.hpp  main_pyb.cpp  scene.cpp  scene.hpp  shader_s.cpp  shader_s.hpp  sphere_vis.cpp  sphere_vis.hpp  texture_s.cpp  texture_s.hpp  vec.hpp  vis3d.cpp  vis3d.hpp
src/geometry/: geometry.hpp  rectangle.cpp  rectangle.hpp  rendering_object.cpp  rendering_object.hpp  rigid_body.cpp  rigid_body.hpp  sphere.cpp  sphere.hpp
src/temp/: sphere_vis.cpp
vdynamics/: __init__.py  scene.py  vis_2d.py  vis_3d.py
vdynamics/resources/shaders/: circle.fs  circle.vs  circle_textured.fs  circle_textured.vs  default.fs  default.vs  sphere.fs  sphere.vs  sphere_collection.vs
